--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Debug Mode",
+            "label": "Build and run (debug mode)",
             "type": "shell",
             "command": "./build.sh debug",
             "group": "build",
@@ -12,9 +12,17 @@
         },
 
         {
-            "label": "Release Mode",
+            "label": "Build and run (release mode)",
             "type": "shell",
             "command": "./build.sh release",
+            "group": "build",
+            "problemMatcher": ["$gcc"]
+        },
+
+        {
+            "label": "Build only (debug mode)",
+            "type": "shell",
+            "command": "./build.sh debug-build-only",
             "group": "build",
             "problemMatcher": ["$gcc"]
         }
